# EveryVoice

./: .buildinfo  .flake8  .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  .pylintrc  CNAME  Contributing.md  LICENSE  README.md  SHELL_COMPLETION.md  cli.py  environment.yml  explicit-env.txt  genindex.html  gpsc-environment.yml  index.html  install.html  latest  main.py  make-everyvoice-env  make-fresh-env.sh  mkdocs.yml  objects.inv  profile-help-ci.sh  pyproject.toml  readme.md  requirements.dev.txt  requirements.test.txt  requirements.torch.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  stable  start.html  train.py  versions.json
.github/: pull_request_template.md
.github/workflows/: docs.yml  matrix-tests.yml  pre-commit.yml  publish.yaml  test.yml
SmallTeamSpeech/: preprocess.py  run_tests.py  train.py  tune.py
SmallTeamSpeech/config/: __init__.py  base_config.py  lj_config.py
SmallTeamSpeech/dataloader/: __init__.py
SmallTeamSpeech/filelists/: lj_full.psv  lj_test.psv
SmallTeamSpeech/model/: utils.py
SmallTeamSpeech/preprocessor/: __init__.py
SmallTeamSpeech/tests/: run.py  test_configs.py  test_dataloader.py  test_model.py  test_preprocessing.py  test_text.py
SmallTeamSpeech/text/: __init__.py  features.py
SmallTeamSpeech/utils/: __init__.py
_modules/: index.html
_sources/: index.rst.txt
_sources/guides/: custom.rst.txt
_sources/reference/: e2e.rst.txt  vocoder.rst.txt
dev/: 404.html  index.html  requirements.txt  sitemap.xml
dev/guides/: index.html
dev/install/: index.html
dev/reference/: index.html
dev/search/: search_index.json
docs/: Makefile  index.md  install.md  make.bat  requirements.txt  start.md
docs/guides/: background.md  custom.md  ethics.md  fastspeech2.md  finetune.md  index.md  schemas.md  styletts2.md
docs/reference/: aligner.md  configuration.md  e2e.md  feature_prediction.md  index.md  vocoder.md
docs/source/: conf.py  index.rst  install.rst  start.rst
everyvoice/: .coveragerc  __init__.py  __main__.py  _version.py  cli.py  conftest.py  evaluation.py  exceptions.py  logger.py  run_tests.py
everyvoice/.schema/: everyvoice-aligner-0.2.json  everyvoice-aligner-0.3.json  everyvoice-aligner-0.4.json  everyvoice-aligner-schema-0.1.json  everyvoice-schema-0.1.json  everyvoice-shared-data-0.4.json  everyvoice-shared-data-schema-0.1.json  everyvoice-shared-text-0.2.json  everyvoice-shared-text-0.3.json  everyvoice-shared-text-0.4.json  everyvoice-shared-text-schema-0.1.json  everyvoice-spec-to-wav-0.2.json  everyvoice-spec-to-wav-0.5.json  everyvoice-spec-to-wav-schema-0.1.json  everyvoice-text-schema-0.1.json  everyvoice-text-to-spec-0.1.json  everyvoice-text-to-spec-0.2.json  everyvoice-text-to-spec-0.3.json  everyvoice-text-to-spec-0.4.json  everyvoice-text-to-spec-0.5.json  everyvoice-text-to-spec-schema-0.1.json  everyvoice-text-to-wav-0.2.json  everyvoice-text-to-wav-0.3.json  everyvoice-text-to-wav-0.4.json  everyvoice-text-to-wav-0.5.json  everyvoice-text-to-wav-schema-0.1.json  preprocessing-everyvoice-schema-0.1.json  vocoder-everyvoice-schema-0.1.json
everyvoice/base_cli/: __init__.py  callback.py  check_group.py  checkpoint.py  clidantic.py  helpers.py  interfaces.py  prediction_writing_callback.py  pydantic_cli.py  shell_completion.py
everyvoice/config/: __init__.py  preprocessing_config.py  shared_types.py  text_config.py  type_definitions.py  utils.py  validation_helpers.py
everyvoice/dataloader/: __init__.py  imbalanced_sampler.py  oversampler.py
everyvoice/demo/: app.py
everyvoice/filelists/: af_full.psv  st_full.psv  tn_full.psv
everyvoice/model/: utils.py
everyvoice/preprocessor/: __init__.py  attention_prior.py  helpers.py  preprocessor.py
everyvoice/tests/: basic_test_case.py  conftest.py  model_stubs.py  preprocessed_audio_fixture.py  preprocessed_input_fixture.py  regress-text.txt  regression-test.sh  stubs.py  test_cli.py  test_configs.py  test_custom_g2p.py  test_dataloader.py  test_demo.py  test_doctests.py  test_evaluation.py  test_model.py  test_preprocessing.py  test_subsample.py  test_symbol_mapping.py  test_text.py  test_utils.py  test_wizard.py  test_wizard_helpers.py
everyvoice/text/: __init__.py  arpabet.py  features.py  lookups.py  phonemizer.py  text_processor.py  textsplit.py  utils.py  utils_heavy.py
everyvoice/utils/: __init__.py  cli_wizard.py  heavy.py
everyvoice/wizard/: __init__.py  basic.py  dataset.py  main_tour.py  prompts.py  simple_term_menu_win_stub.py  tour.py  utils.py  validators.py
guides/: background.html  custom.html  index.html
latest/: 404.html  index.html  objects.inv  requirements.txt  sitemap.xml
latest/guides/: index.html
latest/install/: index.html
latest/overrides/: main.html
latest/reference/: index.html
latest/search/: search_index.json
latest/start/: index.html
reference/: aligner.html  configuration.html  e2e.html  feature_prediction.html  index.html  vocoder.html
smts/: __init__.py  cli.py  preprocess.py  run_tests.py  train.py  tune.py
smts/base_cli/: helpers.py  interfaces.py
smts/config/: __init__.py  base_config.py  lj_config.py  lj_config_istft.py  openslr_config_istft.py  preprocessing_config.py  shared_types.py  text_config.py  utils.py  xh_config_istft.py
smts/dataloader/: __init__.py  imbalanced_sampler.py
smts/filelists/: xh_full.psv
smts/model/e2e/: cli.py  (+2 more)
smts/preprocessor/: __init__.py
smts/tests/: test_configs.py  test_dataloader.py  test_model.py  test_preprocessing.py  test_text.py
smts/text/: __init__.py  features.py  lookups.py
smts/utils/: __init__.py  cli_wizard.py  heavy.py
v0.1.0a2/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0a2/guides/: index.html
v0.1.0a3/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0a0/: 404.html  index.html  sitemap.xml
v0.2.0a1/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.1/: 404.html  index.html  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.1/: 404.html  index.html  sitemap.xml
(+263 files in other folders)
